# Rustroids

./: Cargo.toml
src/: action.rs  entity.rs  game_state.rs  main.rs  system.rs  systems.rs
src/entity/: all_entities.rs  asteroid.rs  bullet.rs  flags.rs  mod.rs  space_ship.rs
src/sf/: mod.rs  raw.rs  transform.rs  utils.rs  vec.rs  vec_sf_integration.rs  vectors.rs
src/system/: mod.rs  physics.rs
