[package]
name = "dlfiroids"
version = "0.1.0"
authors = ["Stefano Montesi <dincio.montesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitflags = "1.2.0"
single = "1.0.0"
num = "0.2.0"
sfml = "0.14.0"
log = "0.4.8"
simplelog = "^0.7.3"
num-traits = "0.2.8"
derive_more = "0.15.0"
